2002-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlButton.cs: RenderAttributes is an override, not new.

	* HtmlContainerControl.cs: use the new Render method in HtmlControl.

	* HtmlControl.cs: added Render method to render the tag and its
	attributes. Works for container and non-containers.

	* HtmlImage.cs: RenderAttributes don't need to be new. Implemented
	Height property.
	
2002-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlContainerControl.cs: some formatting and use HttpUtility.Encode
	instead of Page.Server to encode InnerText.

2002-06-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlAnchor.cs:
	(RenderAttributes): new -> override and fixed little bug that made
	it cause an stack overflow.

	* HtmlContainerControl.cs: reformatted and added tag and attributes 
	rendering.

	* HtmlGenericControl.cs: removed TagName, which is already in 
	HtmlControl.

	* HtmlTable.cs:
	(RenderEndTag): new -> override.

2002-06-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Web.UI.HtmlControls/HtmlForm.cs:
	(RenderAttributes): changed new by override.
	(Name): allow setting the property.

2002-05-10  Duncan Mak  <duncan@ximian.com>

	* HtmlTableCellCollection.cs (this): Updated the indexer to return
	the right type, HtmlTableCell instead of HtmlTableRow. 

	* HtmlInputImage.cs (OnServerClick): Commented out parts that
	won't compile.

	* HtmlForm.cs (RenderAttributes): 
	(RenderChildren): Commented out code that doesn't compile. 

2002-05-07  Duncan Mak  <duncan@ximian.com>

	* HtmlSelect.cs (TrackViewState): Added 'new' keyword to avoid
	clashing with the method defined in the parent class.
	(OnDataBinding): Added missing casts.

	* HtmlForm.cs (Render): Fixed call too SetAttribute, need to cast
	'this' to IAttributeAccessor before calling interface method.
	Also renamed some calls to reflect changes in the API.

	* HtmlControl.cs (WriteOnClickAttribute): Made it not static and
	fixed a typo.
