@@ -8,55 +8,52 @@ using System.Web;
 using System.Web.UI;
 using System.Globalization;
 
-namespace System.Web.UI.HtmlControls{
+namespace System.Web.UI.HtmlControls
+{
 	
-	public class HtmlInputControl : HtmlControl{
+	public class HtmlInputControl : HtmlControl
+	{
 		
-		public HtmlInputControl(string type):base("type"){
-			Attributes["type"] = type;
+		public HtmlInputControl (string type) : base ("type")
+		{
+			Attributes ["type"] = type;
 		}
 		
-		protected virtual new void RenderAttributes(HtmlTextWriter writer){
-			writer.WriteAttribute("name",RenderedName);
-			Attributes.Remove("name");
-			base.RenderAttributes(writer);
-			writer.Write(" /");
+		protected override void RenderAttributes (HtmlTextWriter writer)
+		{
+			writer.WriteAttribute ("name",RenderedName);
+			Attributes.Remove ("name");
+			base.RenderAttributes (writer);
+			writer.Write (" /");
 		}
 		
-		public string Name{
-			get{
-				return UniqueID;
-			}
-			set{}
+		public virtual string Name
+		{
+			get { return UniqueID; }
+			set { ID = value; } // Is this ok?
 		}
 		
-		protected virtual string RenderedName{
-			get{
-				return Name;
-			}
+		protected virtual string RenderedName
+		{
+			get { return Name; }
 		}
 		
-		public string Type{
-			get{
-				string attr = Attributes["type"];
-				if (attr != null){
-					return attr;
-				}
-				return String.Empty;
+		public string Type
+		{
+			get {
+				string _type = Attributes ["type"];
+				return ((_type != null) ? _type : String.Empty);
 			}
 		}
 		
-		public virtual string Value{
-			get{
-				string attr = Attributes["value"];
-				if (attr != null){
-					return attr;
-				}
-				return String.Empty;
+		public virtual string Value
+		{
+			get {
+				string attr = Attributes ["value"];
+				return ((attr != null) ? attr : String.Empty);
 			}
-			set{
-				Attributes["value"] = AttributeToString(value);
-			}
+
+			set { Attributes["value"] = value; }
 		}
 	} // class HtmlInputControl
 } // namespace System.Web.UI.HtmlControls
